trunk/Archive2/c6/dac719564dd262/output
main.cpp:17:10: error: expected initializer before '&' token
 const Log& Log::operator<< <Log::logModifiers>(const Log::logModifiers& t) const;
          ^
main.cpp:19:77: error: template-id 'operator<< <Log::logModifiers>' in declaration of primary template
 const Log& Log::operator<< <Log::logModifiers> (const Log::logModifiers& t) const 
                                                                             ^
main.cpp:19:12: error: prototype for 'const Log& Log::operator<<(const Log::logModifiers&) const' does not match any in class 'Log'
 const Log& Log::operator<< <Log::logModifiers> (const Log::logModifiers& t) const 
            ^
main.cpp:12:34: error: candidate is: template<class T> const Log& Log::operator<<(const T&) const
     template<class T> const Log& operator<<(const T& t) const {
                                  ^
